Project

General

Profile

Bug #53787

diff-iterate include_parent functionality is broken in fast-diff mode

Added by Ilya Dryomov almost 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

$ rbd create --size 20M --thick-provision foo
Thick provisioning: 100% complete...done.
$ rbd snap create foo@snap
Creating snap: 100% complete...done.
$ rbd snap protect foo@snap
$ rbd clone foo@snap bar

Parent image: expected result without and with fast-diff:

$ rbd diff foo
Offset    Length   Type
0         4194304  data
4194304   4194304  data
8388608   4194304  data
12582912  4194304  data
16777216  4194304  data
$ rbd diff --whole-object foo
Offset    Length   Type
0         4194304  data
4194304   4194304  data
8388608   4194304  data
12582912  4194304  data
16777216  4194304  data

Clone image: expected result only without fast-diff:

$ rbd diff bar
Offset    Length   Type
0         4194304  data
4194304   4194304  data
8388608   4194304  data
12582912  4194304  data
16777216  4194304  data
$ rbd diff --whole-object bar    # no output, should be the same as above

This is a regression introduced with https://github.com/ceph/ceph/commit/4429ed4f3f4c1902ac3f6dcc17339529d57c1ede in pacific.


Related issues

Duplicated by rbd - Bug #54970: rbd diff of a clone misses blocks used by the image, referenced to the parent Duplicate
Copied to rbd - Backport #53838: pacific: diff-iterate include_parent functionality is broken in fast-diff mode Resolved

History

#1 Updated by Ilya Dryomov almost 2 years ago

  • Description updated (diff)

#2 Updated by Ilya Dryomov almost 2 years ago

  • Description updated (diff)

#3 Updated by Ilya Dryomov almost 2 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 44496

#4 Updated by Ilya Dryomov almost 2 years ago

  • Status changed from Fix Under Review to Pending Backport

#5 Updated by Backport Bot almost 2 years ago

  • Copied to Backport #53838: pacific: diff-iterate include_parent functionality is broken in fast-diff mode added

#6 Updated by Loïc Dachary almost 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

#7 Updated by Ilya Dryomov over 1 year ago

  • Duplicated by Bug #54970: rbd diff of a clone misses blocks used by the image, referenced to the parent added

Also available in: Atom PDF